--- a/style.css
+++ b/style.css
@@ -20,21 +20,21 @@
   justify-content: space-around;
   align-items: center;
   position: fixed;
-  background-color:#fff;
+  background-color: #fff;
   overflow: hidden;
-  
+  z-index: 999999999;
 }
-.navtext a{
-font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-font-size: 15px;
-font-weight: 400;
-text-decoration: none;
-margin-left: 5px;
-color: #747474;
+.navtext a {
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
+    Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+  font-size: 15px;
+  font-weight: 400;
+  text-decoration: none;
+  margin-left: 5px;
+  color: #747474;
 }
-.navtext :hover{
-  
-color: #00b39b;
+.navtext :hover {
+  color: #00b39b;
 }
 .section1 {
   margin: 60px 15%;
@@ -43,9 +43,9 @@ color: #00b39b;
   zoom: 1;
   max-width: 1015px;
   padding: 0 20px;
-  /* margin: 0 auto; */
   position: relative;
 }
+
 .para {
   display: flex;
   font-weight: 400;
@@ -79,6 +79,7 @@ color: #00b39b;
   margin: 0px 15%;
   justify-content: space-around;
 }
+
 .Country {
   background-color: transparent;
   color: white;
@@ -98,12 +99,77 @@ color: #00b39b;
 }
 .patients {
   background-color: #00ccb1;
+  position: relative;
+  animation-name: example;
+  animation-duration: 1s;
+  animation-fill-mode: forwards;
 }
+@keyframes example {
+  from {
+    top: 100px;
+  }
+  to {
+    top: 0px;
+  }
+}
+
 .doctors {
   background-color: #3d83df;
+  position: relative;
+  animation-name: example1;
+  animation-duration: 1.5s;
+  animation-fill-mode: forwards;
 }
+@keyframes example1 {
+  from {
+    top: 110px;
+  }
+  to {
+    top: 0px;
+  }
+}
+
 .clinics {
   background-color: #1b2734;
+  position: relative;
+  animation-name: example2;
+  animation-duration: 2s;
+  animation-fill-mode: forwards;
+}
+@keyframes example2 {
+  from {
+    top: 120px;
+  }
+  to {
+    top: 0px;
+  }
+}
+.patientsmove {
+  position: relative;
+  animation-name: example4;
+  animation-duration: 1.5s;
+  animation-fill-mode: forwards;
+}
+.doctorsmove {
+  position: relative;
+  animation-name: example4;
+  animation-duration: 2s;
+  animation-fill-mode: forwards;
+}
+.clinicsmove {
+  position: relative;
+  animation-name: example4;
+  animation-duration: 2.5s;
+  animation-fill-mode: forwards;
+}
+@keyframes example4 {
+  from {
+    left: 300px;
+  }
+
+  to {
+    left: 0px;
+  }
 }
 
 /* tableau */
@@ -219,6 +285,67 @@ body .fullpart {
 .small {
   margin-top: 20px;
   margin-left: 40px;
+}
+
+.countrymove{
+  position: relative;
+  animation-name: example5;
+  animation-duration: 1s;
+  animation-fill-mode: forwards;
+}
+@keyframes example5 {
+  from {
+    top: 300px;
+  }
+
+  to {
+    top: 0px;
+  }
+}
+.visitsmove{
+  position: relative;
+  animation-name: example5;
+  animation-duration: 1.5s;
+  animation-fill-mode: forwards;
+}
+@keyframes example5 {
+  from {
+    top: 300px;
+  }
+
+  to {
+    top: 0px;
+  }
+}
+.patientsmove{
+  position: relative;
+  animation-name: example5;
+  animation-duration: 2s;
+  animation-fill-mode: forwards;
+}
+@keyframes example5 {
+  from {
+    top: 300px;
+  }
+
+  to {
+    top: 0px;
+  }
+}
+.doctorsmove{
+  position: relative;
+  animation-name: example5;
+  animation-duration: 2.5s;
+  animation-fill-mode: forwards;
+}
+@keyframes example5 {
+  from {
+    top: 300px;
+  }
+
+  to {
+    top: 0px;
+  }
 }
 /* empty box */
 
